# snowgalileo

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  HR_CONCEPT.md  LICENSE  Makefile  Makefile.private.example  Makefile.targets  Makefile.variables  README.md  TODO_before_merge.md  cloud_analysis.py  ee-marlena-credentials.json  eval.py  eval_only.py  eval_sweeps.py  export.py  export_for_eval.py  finetune.py  finetune_sweeps.py  generate_random_config.py  main_train.py  normalizing_dict.json  normalizing_dict_full.json  normalizing_dict_new.json  noxfile.py  predict_and_generate_output.py  pretrain.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_prediction_test.sh  sklearn_sweeps.py  slurm-6254080.out  slurm-6254633.out  slurm-6254687.out  slurm-6254699.out  slurm-6254709.out  (+24 more)
.github/workflows/: ci.yaml  ci_temp.yaml  ci_test.yaml  mypy.yaml  precommit.yaml  tests.yaml
.make/: .bumpversion.toml  CHANGES_MAKEFILE.md  Makefile  README.md  base.make  conda.make  docs.make  lint.make  manager.make  poetry.make  test.make  uv.make
.make/img/: README.md
.make/tests/: test-script.sh  test_environment.yml
ai2_beaker/: README.md  beaker-config.yaml  sync_weka.yaml
config/: ai4snow_base.json  ai4snow_nano.json  ai4snow_ps10.json  ai4snow_tiny.json  nano.json  normalization.json  normalizing_dict.json  normalizing_dict_1km.json  normalizing_dict_500m.json  normalizing_dict_500m_old2.json  normalizing_dict_updated.json
config/jepa/: default.json
config/mae/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  (+150 more)
configs/: normalizing_dict.json  normalizing_dict_updated.json
configs/bow_valley/: cell_filter_manifest.csv  cube.yaml  cube_cells.csv  cube_full_run.yaml  inference.yaml  inference_full_run.yaml
configs/eval/: fac_test_rockies_clouds_tiny.json  fsc_inference_bow_river_tiny.json  fsc_rollout_46.38_tiny.json  fsc_rollout_46_22_tiny.json  fsc_test_rockies_5km_tiny.json  fsc_test_rockies_ablate_hr_opt_tiny.json  fsc_test_rockies_ablate_hr_sar_tiny.json  fsc_test_rockies_ablate_low_res_tiny.json  fsc_test_rockies_ablate_med_res_tiny.json  (+30 more)
data/: BOW_VALLEY_DATA_LAYOUT.md  README.md  bow_valley_inference_aoi.geojson  bow_valley_processing  bow_valley_selection_raw  clipped_bow_valley_selection_raw  normalization.json  processed_bow_valley_cubes
docs/: local_data_processing.md
eval/: eurosat_eval.py  so2sat_eval.py
notebooks/: cloud cover download.ipynb  cloud_simulation.ipynb  combined_results_best.csv  combined_results_clouds.csv  plot_sampling_points.ipynb  visualizations.ipynb
paper_visualizations/: README.md  combined_results_mlp_with_forest.csv  combined_results_rf_with_forest.csv  combined_results_svr_with_forest.csv  combined_results_with_forest_version_best.csv  combined_results_with_forest_version_clouds.csv  snowgalileo_combined_results.csv  updated_sklearn_rmse.xlsx  updated_snowgalileo_rockies_rmse.xlsx  updated_snowgalileo_switzerland_rmse.xlsx
pretraining_points/: sampling_points_mountains_lat_42-60.csv
scripts/: 20241105_new_runs.py  README.md  ablate_dataset_size.py  ablate_pixels.py  ablate_sensors.py  ablate_sensors_with_clouds.py  ablate_timeseries.py  assign_splits_rslearn_forest.py  check_exports.py  cloud_analysis.py  compare_csv_results.py  compare_filenames_efficient.py  compare_files.py  compute_norm.py  compute_normalization.py  copy_matching_eval.py  copy_tifs.py  cropharvest_sweeps.py  debug_normalization.py  eval_crop_bounds.py  eval_individual_patches.py  eval_only.py  eval_with_clouds.py  export_bow_valley_cube.py  export_for_eval.py  export_for_inference.py  export_for_pretrain.py  export_from_stac.py  finetune.py  finetune_sweeps.py  finetune_with_clouds.py  forest_analysis.py  generate_grid.py  geo_train_test_split.py  get_distribution.py  get_metadata_folder.py  get_target_coordinates.py  get_targets.py  hr_analysis.py  infer_bow_valley_daily_fsc.py  (+17 more)
shell_scripts/: run0.sh  run12000.sh  run15000.sh  run18000.sh  run21000.sh  run24000.sh  run27000.sh  run3000.sh  run30000.sh  run33000.sh  run36000.sh  run39000.sh  run42000.sh  run45000.sh  run48000.sh  run51000.sh  run6000.sh  run9000.sh  run_compute_norm.sh  run_copy_eval.sh  run_copy_files.sh  run_crop_eval.sh  run_eval.sh  run_eval_export.sh  run_export_checks.sh  run_export_single_file.sh  run_train.sh
src/: README.md  beaker.py  collate_fns.py  conditioner.py  config.py  data_augmentation.py  embeddings.py  flexipresto.py  loss.py  masked_datasets.py  masking.py  masking_mod.py  presto.py  snowgalileo.py  utils.py
tests/: README.md  _archive_fixtures.py  conftest.py  test_augmentation.py  test_clip_dataset.py  test_conditioner.py  test_config.py  test_cropharvest.py  test_data_config.py  test_dataset.py  test_dataset_stats.py  test_end_to_end.py  test_eurosat.py  test_eval.py  test_flexipresto.py  test_loss.py  test_masking.py  test_pastis.py  test_patch_pastis.py  test_per_token_prediction.py  test_presto.py  test_pretrain_sampling.py  test_retrieve_cloud_state.py  test_retrieve_season_from_filename.py  test_rf.py  test_segmentation_eval.py  test_sklearn_preprocessing.py  test_snowgalileo.py  test_so2sat.py  test_treesat.py  test_viewer_paths.py
(+935 files in other folders)
